Start of moving sort option out of filter area. Need to fix overlapping issue next.

--- a/docroot/themes/custom/uids_base/scss/views/view-bef.scss
+++ b/docroot/themes/custom/uids_base/scss/views/view-bef.scss
@@ -265,4 +265,11 @@
       }
     }
   }
+
+  #edit-bef-sort-options {
+    position: absolute;
+    bottom: -78px;
+    right: 0;
+  }
+
 }
